FACES-2160 Move portal:navBar as a portal:nav section

--- a/demos/showcase/showcase-portlet/src/main/resources/portal.properties
+++ b/demos/showcase/showcase-portlet/src/main/resources/portal.properties
@@ -4,5 +4,4 @@ portal_portal_inputRichText=general:inputRichText.xhtml,InputRichTextBacking.jav
 portal_portal_inputSearch=general:inputSearch.xhtml,InputSearchBacking.java|without-button:inputSearch.xhtml,InputSearchBacking.java|instant-ajax:inputSearch.xhtml,InputSearchBacking.java|nav-bar:inputSearch.xhtml,InputSearchBacking.java
 portal_portal_permissionsURL=general:permissionsURL.xhtml,PermissionsURLModelBean.java|toplevel:permissionsURL.xhtml|rowlevel:permissionsURL.xhtml|windowstate:permissionsURL.xhtml
 portal_portal_runtime=general:runtime.xhtml,RuntimeBacking.java|multiple-instances:runtime.xhtml,RuntimeBacking.java
-portal_portal_nav=general:nav.xhtml|data-model:nav.xhtml,NavModelBean.java
-portal_portal_navBar=general:navBar.xhtml
+portal_portal_nav=general:nav.xhtml|data-model:nav.xhtml,NavModelBean.java|nav-bar:nav.xhtml
