FACES-2005 Develop alloy:video component FACES-2034 Develop alloy:audio component

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -10,17 +10,18 @@ alloy-accordion-general-example-2=Specifying the [vdldoc:alloy:tab:headerText] a
 alloy-accordion-multiple=When [vdldoc:alloy:accordion:multiple]=`true`, multiple tabs can be expanded. <br /><br />*JavaScript API:*<ul><li>`collapseAll()` causes all of the accordion tabs to close</li><li>`expandAll()` causes all of the accordion tabs to open</li></ul>
 alloy-accordion-selected-tab=The [vdldoc:alloy:accordion:selectedIndex] attribute is a zero-based integer representing the selected tab. The *client-side state* of the tab is preserved when a form is submitted.
 alloy-accordion-server-events=Specifying the [vdldoc:f:ajax] child tag with [vdldoc:f:ajax:event]=`tabCollapse` or `tabExpand` will broadcast the server-side [javadoc:com.liferay.faces.alloy.component.tab.TabCollapseEvent] or [javadoc:com.liferay.faces.alloy.component.tab.TabExpandEvent] respectively. Listening to the event is accomplished by specifying a backing-bean method via the [vdldoc:alloy:accordion:tabCollapseListener] and [vdldoc:alloy:accordion:tabExpandListener] attributes.
-alloy-audio=[javadoc:com.liferay.faces.alloy.component.Audio is a [javadoc:javax.faces.component.UIComponent] component that renders a `&lt;div&gt;` that contains an HTML5 `&lt;audio&gt;` element. It also supports graceful degradation for older browsers using the <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash</a> audio player.
+alloy-audio=[javadoc:com.liferay.faces.alloy.component.Audio] is a [javadoc:javax.faces.component.UIComponent] component that renders a `&lt;div&gt;` that contains an HTML5 `&lt;audio&gt;` element. It also supports graceful degradation for older browsers.
 alloy-audio-general=The general usage of the component is to set the [vdldoc:alloy:audio:value] attribute to a [javadoc:java.lang.String] audio URL. Degradation to a Flash player can be enabled via the [vdldoc:alloy:audio:degrade] attribute (defaults to true). 
 alloy-audio-general-example-1=Context-relative path to a resource via the [vdldoc:alloy:audio:value] attribute
 alloy-audio-general-example-2=JSF resource via the `#{resource}` EL keyword
 alloy-audio-general-example-3=JSF resource via the Alloy [javadoc:com.liferay.faces.alloy.component.resource.Resource] component
 alloy-audio-general-example-4=JSF resource via the [vdldoc:alloy:audio:library] and [vdldoc:alloy:audio:name] attributes
-alloy-audio-alternative-flash-player=The component supports alternative fallback Flash players via the [vdldoc:alloy:audio:flashPlayer] attribute. Additional Flash `&lt;param&gt;` tags can be inserted into the Flash player's `&lt;object&gt;` tag by specifying an [vdldoc:f:facet] with `name="flash"`.
-alloy-audio-alternative-formats=The component supports supplying alternative audios to support different browsers.
-alloy-audio-alternative-formats-example-1=Supplying alternative audios via [vdldoc:alloy:resource] child tags.
-alloy-audio-alternative-formats-example-2=Supplying alternative audios via supplying a collection of Alloy [javadoc:com.liferay.faces.alloy.component.resource.Resource]s in the [vdldoc:alloy:audio:value] attribute.
-alloy-audio-html5-passthrough=The component can be utilized as an HTML5 passthrough element.
+alloy-audio-graceful-degradation=The component supports graceful degradation for older browsers using the <a href="http://get.adobe.com/flashplayer/" target="_blank">Adobe&reg; Flash&reg; Player</a> bundled with AlloyUI. If no value is specified in the `&lt;alloy:audio&gt;` tag, then the audio from the first child `&lt;alloy:resource&gt;` tag is used.<br/><br/>A different player can be specified via the [vdldoc:alloy:video:flashPlayer] attribute. Additional  `&lt;param&gt;` tags can be inserted into the Adobe&reg; Flash&reg player's `&lt;object&gt;` tag by specifying an [vdldoc:f:facet] with `name="flash"`. <br/><br/><em>Adobe&reg; Flash&reg; is a registered trademark of Adobe Systems Incorporated.</em>
+alloy-audio-graceful-degradation-example-1=Adobe&reg; Flash&reg; Player<br/>(Pre-HTML5 Browser Required)
+alloy-audio-alternate-formats=The component supports supplying alternate audio formats to support different browsers.
+alloy-audio-alternate-formats-example-1=Supplying alternate audio formats via [vdldoc:alloy:resource] child tags.
+alloy-audio-alternate-formats-example-2=Supplying alternate audio formats via supplying a collection of Alloy [javadoc:com.liferay.faces.alloy.component.resource.Resource]s in the [vdldoc:alloy:audio:value] attribute.
+alloy-audio-html5-passthrough=The component can be utilized as an HTML5 passthrough element. *(Requires JSF 2.2+)*
 alloy-autocomplete=[javadoc:com.liferay.faces.alloy.component.autocomplete.AutoComplete] is a [javadoc:javax.faces.component.UIInput] component that renders an `&lt;input&gt;` element and a popup list. Suggestions (list items) can be added by specifying [vdldoc:f:selectItem] or [vdldoc:f:selectItems] tags as children. Since it extends [javadoc:javax.faces.component.html.HtmlInputText], it supports all the features of [vdldoc:h:inputText].
 alloy-autocomplete-general=This component includes built-in *server-side* and *client-side* item filters which can be utilized in place of custom filtering.
 alloy-autocomplete-general-example-1=Server-side filtering
@@ -343,19 +344,20 @@ alloy-tabview-dynamic-tabs=Tabs can be rendered *dynamically* by setting the [vd
 alloy-tabview-selected-tab=The [vdldoc:alloy:tabView:selectedIndex] attribute is a zero-based integer representing the selected tab. The *client-side state* of the tab is preserved when a form is submitted.
 alloy-tabview-server-events=Specifying the [vdldoc:f:ajax] child tag with [vdldoc:f:ajax:event]=`tabSelect` will broadcast the server-side [javadoc:com.liferay.faces.alloy.component.tab.TabSelectEvent]. Listening to the event is accomplished by specifying a backing-bean method via the [vdldoc:alloy:tabView:tabSelectListener] attribute.
 alloy-tabview-wizard=The component can act like a step-by-step *wizard* by controlling the [vdldoc:alloy:tabView:selectedIndex] attribute of the [vdldoc:alloy:tabView] and the [vdldoc:alloy:tab:disabled] attribute of each [vdldoc:alloy:tab] child.
-alloy-video=[javadoc:com.liferay.faces.alloy.component.Video is a [javadoc:javax.faces.component.UIComponent] that renders a `&lt;div&gt;` that contains an HTML5 `&lt;video&gt;` element. It also supports graceful degradation for older browsers using the <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash</a> video player.
-alloy-video-general=The general usage of the component is to set the [vdldoc:alloy:video:value] attribute to a [javadoc:java.lang.String] video URL. Degradation to a Flash player can be enabled via the [vdldoc:alloy:video:degrade] attribute (defaults to true). 
+alloy-video=[javadoc:com.liferay.faces.alloy.component.Video is a [javadoc:javax.faces.component.UIComponent] that renders a `&lt;div&gt;` that contains an HTML5 `&lt;video&gt;` element.  It also supports graceful degradation for older browsers.
+alloy-video-general=The general usage of the component is to set the [vdldoc:alloy:video:value] attribute to a [javadoc:java.lang.String] video URL. Degradation to a Flash player can be enabled via the [vdldoc:alloy:video:degrade] attribute (defaults to true).
 alloy-video-general-example-1=Context-relative path to a resource via the [vdldoc:alloy:video:value] attribute
 alloy-video-general-example-2=JSF resource via the `#{resource}` EL keyword
 alloy-video-general-example-3=JSF resource via the Alloy [javadoc:com.liferay.faces.alloy.component.resource.Resource] component
 alloy-video-general-example-4=JSF resource via the [vdldoc:alloy:video:library] and [vdldoc:alloy:video:name] attributes
-alloy-video-alternative-flash-player=The component supports alternative fallback Flash players via the [vdldoc:alloy:video:flashPlayer] attribute. Additional Flash `&lt;param&gt;` tags can be inserted into the Flash player's `&lt;object&gt;` tag by specifying an [vdldoc:f:facet] with `name="flash"`.
-alloy-video-alternative-formats=The component supports supplying alternative videos to support different browsers.
-alloy-video-alternative-formats-example-1=Supplying alternative videos via [vdldoc:alloy:resource] child tags.
-alloy-video-alternative-formats-example-2=Supplying alternative videos via supplying a collection of Alloy [javadoc:com.liferay.faces.alloy.component.resource.Resource]s in the [vdldoc:alloy:video:value] attribute.
-alloy-video-html5-passthrough=The component can be utilized as an HTML5 passthrough element.
-alternative-flash-player=Alternative Flash Player
-alternative-formats=Alternative Formats
+alloy-video-graceful-degradation=The component supports graceful degradation for older browsers using the <a href="http://get.adobe.com/flashplayer/" target="_blank">Adobe&reg; Flash&reg; Player</a> bundled with AlloyUI. If no value is specified in the `&lt;alloy:video&gt;` tag, then the video from the first child `&lt;alloy:resource&gt;` tag is used.<br/><br/>A different player can be specified via the [vdldoc:alloy:video:flashPlayer] attribute. Additional  `&lt;param&gt;` tags can be inserted into the Adobe&reg; Flash&reg player's `&lt;object&gt;` tag by specifying an [vdldoc:f:facet] with `name="flash"`.<br/><br/><em>Adobe&reg; Flash&reg; is a registered trademark of Adobe Systems Incorporated.</em>
+alloy-video-graceful-degradation-example-1=Adobe&reg; Flash&reg; Player<br/>(Pre-HTML5 Browser Required)
+alloy-video-alternate-formats=The component supports supplying alternate videos to support different browsers.
+alloy-video-alternate-formats-example-1=Supplying alternate videos via [vdldoc:alloy:resource] child tags.
+alloy-video-alternate-formats-example-2=Supplying alternate videos via supplying a collection of Alloy [javadoc:com.liferay.faces.alloy.component.resource.Resource]s in the [vdldoc:alloy:video:value] attribute.
+alloy-video-html5-passthrough=The component can be utilized as an HTML5 passthrough element. *(Requires JSF 2.2+)*
+flash-player=Flash Player
+alternate-formats=Alternate Formats
 answer-at-stackoverflow=answer at stackoverflow
 append-new-files=Append New Files
 attribute-value=Attribute Value
@@ -499,6 +501,7 @@ highlighter-type=Highlighter Type
 first-name=First Name
 form-action-attribute-view-params-description=The `action` attribute of the rendered `&lt;form&gt;` (shown below) contains view parameters in the query-string. 
 general=General
+graceful-degradation=Graceful Degradation
 h-inputfile=[javadoc:javax.faces.component.html.HtmlInputFile] is a [javadoc:javax.faces.component.UIInput] component for JSF 2.2+ that renders an `&lt;input&gt;` element with `type="file"`.
 h-inputfile-general=By default, one file can be uploaded as a non-Ajax (full-page) postback.
 h-inputfile-instant-ajax=Files can be uploaded *instantly* via Ajax by adding an [vdldoc:f:ajax] child tag.
