FACES-2005 Develop alloy:video component (JSF 2.2 compatibility layer) FACES-2034 Develop alloy:audio component (JSF 2.2 compatibility layer)

--- a/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
@@ -17,10 +17,10 @@ misc_alloy_body=general:webappBody.xhtml,portletBody.xhtml
 misc_alloy_form=general:form.xhtml,FormBackingBean.java|instant-ajax:form.xhtml,FormBackingBean.java|view-params:form.xhtml,FormBackingBean.java
 misc_alloy_head=general:webappHead.xhtml,portletHead.xhtml
 misc_alloy_loadConstants=general:loadConstants.xhtml,ClassConstants.java,EnumConstants.java,InterfaceConstants.java
-multimedia_alloy_audio=general:audio.xhtml,AudioBacking.java|alternative-flash-player:audio.xhtml,AudioBacking.java|alternative-formats:audio.xhtml,AudioBacking.java|html5-passthrough:audio.xhtml
+multimedia_alloy_audio=general:audio.xhtml,AudioBacking.java|alternative-flash-player:audio.xhtml,AudioBacking.java|alternative-formats:audio.xhtml,AudioBacking.java
 multimedia_alloy_icon=general:icon.xhtml
 multimedia_alloy_image=general:image.xhtml
-multimedia_alloy_video=general:video.xhtml,VideoBacking.java|alternative-flash-player:video.xhtml,VideoBacking.java|alternative-formats:video.xhtml,VideoBacking.java|html5-passthrough:video.xhtml
+multimedia_alloy_video=general:video.xhtml,VideoBacking.java|alternative-flash-player:video.xhtml,VideoBacking.java|alternative-formats:video.xhtml,VideoBacking.java
 output_alloy_message=general:message.xhtml,MessageBackingBean.java
 output_alloy_messages=general:messages.xhtml,MessageBackingBean.java
 output_alloy_outputFormat=general:outputFormat.xhtml
