--- a/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
@@ -17,7 +17,7 @@ misc_alloy_body=general:webappBody.xhtml,portletBody.xhtml
 misc_alloy_form=general:form.xhtml,FormBackingBean.java|instant-ajax:form.xhtml,FormBackingBean.java|view-params:form.xhtml,FormBackingBean.java
 misc_alloy_head=general:webappHead.xhtml,portletHead.xhtml
 misc_alloy_loadConstants=general:loadConstants.xhtml,ClassConstants.java,EnumConstants.java,InterfaceConstants.java
-misc_alloy_progressBar=general:progressBar.xhtml,ProgressBarBacking.java|client-side:progressBar.xhtml|server-events:progressBar.xhtml,ProgressBarBacking.java
+misc_alloy_progressBar=general:progressBar.xhtml,ProgressBarBacking.java|client-side:progressBar.xhtml|server-events:progressBar.xhtml,ProgressBarBacking.java|vertical:progressBar.xhtml,ProgressBarBacking.java
 multimedia_alloy_audio=general:audio.xhtml,AudioBacking.java|graceful-degradation:audio.xhtml,AudioBacking.java|alternate-formats:audio.xhtml,AudioBacking.java|html5-passthrough:audio.xhtml
 multimedia_alloy_icon=general:icon.xhtml
 multimedia_alloy_image=general:image.xhtml
