FACES-2167: push the skip true further out into the leaf projects that need skipping.  showcase-portlet needs the poms for liferay-faces-showcase-demos and liferay-faces-demos which were not getting intalled because of skipping

--- a/demos/pom.xml
+++ b/demos/pom.xml
@@ -195,7 +195,7 @@
 			<plugin>
 				<artifactId>maven-install-plugin</artifactId>
 				<configuration>
-					<skip>true</skip>
+					<skip>false</skip>
 				</configuration>
 			</plugin>
 		</plugins>
