--- a/demos/portal/pom.xml
+++ b/demos/portal/pom.xml
@@ -18,4 +18,15 @@
 		<module>primefaces5-users-portlet</module>
 	</modules>
 
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-install-plugin</artifactId>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
