--- a/demos/showcase/showcase-portlet/pom.xml
+++ b/demos/showcase/showcase-portlet/pom.xml
@@ -101,6 +101,12 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<artifactId>maven-install-plugin</artifactId>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
 		</plugins>
 		<resources>
 			<resource>
