--- a/demos/bridge/pom.xml
+++ b/demos/bridge/pom.xml
@@ -47,5 +47,15 @@
 			</dependencies>
 		</profile>
 	</profiles>
+	<build>
+      <plugins>
+         <plugin>
+            <artifactId>maven-install-plugin</artifactId>
+            <configuration>
+               <skip>true</skip>
+            </configuration>
+         </plugin>
+      </plugins>
+	</build>
 
 </project>
