--- a/demos/portal/pom.xml
+++ b/demos/portal/pom.xml
@@ -30,4 +30,16 @@
 			</modules>
 		</profile>
 	</profiles>
+
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-install-plugin</artifactId>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
