--- a/demos/showcase/pom.xml
+++ b/demos/showcase/pom.xml
@@ -18,4 +18,14 @@
 		<module>showcase-portlet</module>
 	</modules>
 
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-install-plugin</artifactId>
+				<configuration>
+					<skip>false</skip>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
