--- a/util/generator.properties
+++ b/util/generator.properties
@@ -13,6 +13,7 @@ builder.copyright.year=2015
 
 builder.faces.api.output.dir=${component.api.output.dir}
 builder.faces.impl.output.dir=${component.impl.output.dir}
+builder.faces.version=${faces.spec.version}
 builder.faces.taglib.xml.namespace=${namespace}
 builder.faces.taglib.xml.output.dir=src/main/resources/META-INF
 
