FACES-2008 Develop alloy:paginator FACES-1943 Develop alloy:dataTable

--- a/alloy/src/main/resources/aui-i18n.properties
+++ b/alloy/src/main/resources/aui-i18n.properties
@@ -7,4 +7,5 @@ no-files-selected=No files selected
 not-started=Not started
 please-enter-a-value-between-x-and-x=Please enter a value between {0} and {1}.
 progress=Progress
+results-x-x-of-x-page-x-of-x=Results {0}-{1} of {2} (Page {3} of {4})
 upload-files=Upload Files
