--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -86,9 +86,12 @@ alloy-datalist-selection=You can use children in your [vdldoc:alloy:dataItem]s t
 alloy-datatable=[javadoc:com.liferay.faces.alloy.component.datatable.DataTable] is a [javadoc:javax.faces.component.UIData] (iterator) component that renders a `table` element with tabular data and is designed to be used in conjunction with [vdldoc:alloy:column] child component tags. Since it extends [javadoc:javax.faces.component.html.HtmlDataTable], it supports all the features of [vdldoc:h:dataTable].
 alloy-datatable-general=The [vdldoc:alloy:dataTable:value] attribute tag must be bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:alloy:dataTable:var] attribute is used to introduce a variable name into the EL when iterating over the model.
 alloy-datatable-filter=The table rows contained in the [javadoc:javax.faces.model.DataModel] can be limited by *filter* criteria provided by the user.
-alloy-datatable-lazy=The table rows contained in the [javadoc:javax.faces.model.DataModel] can be fetched in a *lazy* (on-demand) manner.
-alloy-datatable-pagination=The table rows contained in the [javadoc:javax.faces.model.DataModel] can be *paginated* and the number of rows per-page is controlled by the value of the [vdldoc:alloy:dataTable:rows] attribute.
-alloy-datatable-sort=The table rows contained in the [javadoc:javax.faces.model.DataModel] can be *sorted* according to criteria provided by the user.
+alloy-datatable-lazy=The table rows contained in the [javadoc:javax.faces.model.DataModel] can be fetched in a *lazy* (on-demand) manner by having the [vdldoc:alloy:dataTable:value] attribute bound via EL to an instance of [javadoc:com.liferay.faces.util.model.OnDemandDataModel]. The rows are fetched on the server-side whenever the user clicks on a pagination control, selects a sort column, or enters a filter.
+alloy-datatable-paginator=The table rows contained in the [javadoc:javax.faces.model.DataModel] can be paginated with [vdldoc:alloy:paginator] and the number of rows per-page is controlled by the value of the [vdldoc:alloy:dataTable:rows] attribute.
+alloy-datatable-selection=<p>Setting [vdldoc:alloy:dataTable:selectionMode]=`checkbox` will render a *check* in the first column of each row which enables *selection of multiple rows*.</p><p>Setting [vdldoc:alloy:dataTable:selectionMode]=`radio` will render a *radio button* in the first column of each row which enables *selection of a single row*. The user can hold down the &#8984; or &#10070; (meta) key in order to *deselect* the currently selected row.</p><p>The *selected row indexes* can be determined in a backing bean by calling [javadoc:com.liferay.faces.alloy.component.datatable.DataTable]'s `getSelectedRowIndexes()` method.</p>
+alloy-datatable-server-events=<p>Specifying the [vdldoc:f:ajax] child tag with [vdldoc:f:ajax:event]=`rowSelect` or `rowDeselect` will broadcast the server-side [javadoc:com.liferay.faces.alloy.component.datatable.RowSelectEvent] or [javadoc:com.liferay.faces.alloy.component.datatable.RowDeselectEvent] respectively. Listening to the event is accomplished by specifying a backing-bean method via the [vdldoc:alloy:dataTable:rowSelectListener] and [vdldoc:alloy:dataTable:rowDeselectListener] attributes.</p><p>Specifying the [vdldoc:f:ajax] child tag with [vdldoc:f:ajax:event]=`rowSelectRange` or `rowDeselectRange` will broadcast the server-side [javadoc:com.liferay.faces.alloy.component.datatable.RowSelectRangeEvent] or [javadoc:com.liferay.faces.alloy.component.datatable.RowDeselectRangeEvent] respectively. Listening to the event is accomplished by specifying a backing-bean method via the [vdldoc:alloy:dataTable:rowSelectRangeListener] and [vdldoc:alloy:dataTable:rowDeselectRangeListener] attributes.</p>
+alloy-datatable-sort-single-column=<p>In order to enable sorting, the [vdldoc:alloy:dataTable:value] attribute of the DataTable must implement the [javadoc:com.liferay.faces.util.model.Sortable] interface (such as [javadoc:com.liferay.faces.util.model.OnDemandDataModel]). When the user clicks on a sortable column header, the `Sortable.setSortCriteria(List&lt;SortCriterion&gt;)` method is called on the DataTable's value. Columns can be made sortable by setting the [vdldoc:alloy:column:sortBy] attribute of a nested `alloy:column` component tag.</p>
+alloy-datatable-sort-multiple-columns=<p>In order to enable sorting, the [vdldoc:alloy:dataTable:value] attribute of the DataTable must implement the [javadoc:com.liferay.faces.util.model.Sortable] interface (such as [javadoc:com.liferay.faces.util.model.OnDemandDataModel]). When the user clicks on a sortable column header, the `Sortable.setSortCriteria(List&lt;SortCriterion&gt;)` method is called on the DataTable's value. Columns can be made sortable by setting the [vdldoc:alloy:column:sortBy] attribute of a nested `alloy:column` component tag.</p><p>Setting [vdldoc:alloy:dataTable:multiColumnSort]=`true` enables the user to hold down the &#8984; or &#10070; (meta) key in order to select multiple columns (in a particular order) for sorting.</p>
 alloy-dialog=[javadoc:com.liferay.faces.alloy.component.dialog.Dialog] is a [javadoc:javax.faces.component.UIPanel] component that that renders a `&lt;div&gt;` element that is initially styled with `display:none` so that it can be popped-up as an *overlay* by calling the JavaScript API. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of [vdldoc:h:panelGroup].
 alloy-dialog-general=The dialog can be popped-up by specifying a [vdldoc:alloy:dialog:clientKey] and calling the `show()` JavaScript function. When [vdldoc:alloy:dialog:modal]=`true` the user will be forced to interact with or dismiss the dialog in order to return to the main application. When [vdldoc:alloy:dialog:dismissible]=`true` the dialog can be dismissed by clicking outside of it, unless it is [vdldoc:alloy:dialog:modal].<br /><br />*JavaScript API:*<ul><li>`show()` causes the dialog to be visible</li><li>`hide()` causes the dialog to be invisible</li><li>`toggle()` causes the dialog visibility to be toggled</li></ul>
 alloy-dialog-general-example-1=Default usage with [vdldoc:alloy:dialog:dismissible]=`false`
@@ -367,6 +370,7 @@ back-to-navigation-with=Back to Navigation with
 bbcode=BBCode
 birthday=Birthday
 block=Block
+bottom=Bottom
 bridge-inputfile=[javadoc:com.liferay.faces.bridge.component.inputfile.InputFile] is a [javadoc:javax.faces.component.UIInput] component that renders an `&lt;input&gt;` element with `type="file"`. Since it extends [javadoc:javax.faces.component.html.HtmlInputFile], it supports all the features of [vdldoc:h:inputFile] and also supports multi-file uploads.
 bridge-inputfile-general=By default, one file can be uploaded as a non-Ajax (full-page) postback.
 bridge-inputfile-instant-ajax=Files can be uploaded *instantly* via Ajax by adding an [vdldoc:f:ajax] child tag.
@@ -499,11 +503,12 @@ favorite-liferay-benefit=Favorite Liferay Benefit
 field-label=Field Label
 fieldset-legend=Fieldset Legend
 filter=Filter
+first=First
+first-name=First Name
+form-action-attribute-view-params-description=The `action` attribute of the rendered `&lt;form&gt;` (shown below) contains view parameters in the query-string.
 footer=Footer
 highlighter=Highlighter
 highlighter-type=Highlighter Type
-first-name=First Name
-form-action-attribute-view-params-description=The `action` attribute of the rendered `&lt;form&gt;` (shown below) contains view parameters in the query-string. 
 general=General
 graceful-degradation=Graceful Degradation
 h-inputfile=[javadoc:javax.faces.component.html.HtmlInputFile] is a [javadoc:javax.faces.component.UIInput] component for JSF 2.2+ that renders an `&lt;input&gt;` element with `type="file"`.
@@ -526,8 +531,10 @@ invalid-selection=Invalid Selection
 inverse=Inverse
 jstl=JSTL
 large=Large
+last=Last
 last-name=Last Name
 lazy=Lazy
+left=Left
 like=Like
 link=Link
 link-to-a-map-of=Link to a map of
@@ -552,12 +559,14 @@ multiple-panes=Multiple Panes
 nav-bar=Nav Bar
 navigation=Navigation
 next=Next
+no-customers-selected=No Customers Selected
+none=None
 note=Note
 note-chromium-issue-4579=Note: <a href="https://code.google.com/p/chromium/issues/detail?id=4579" target="_blank">Chromium Issue#4579</a> may cause this component to display *more than one* menu item.
 online=Online
 open-orders=Open Orders
 output=Output
-pagination=Pagination
+paginator=Paginator
 panel=Panel
 param=Param
 parameter-value=Parameter Value
@@ -619,6 +628,7 @@ portlet-resourceurl-general=Specify [vdldoc:portlet:param] as a child tag in ord
 position-mouse-cursor-here=Position mouse cursor here
 primary=Primary
 preview=Preview
+previous=Previous
 progress=Progress
 purchases=Purchases
 rating=Rating
@@ -629,18 +639,23 @@ required=Required
 required-message=This is a required field
 reset-progress=Reset Progress
 resource=Resource
+right=Right
 right-to-left=Right-To-Left
 rowlevel=Row-Level
+rows-per-page=Rows Per Page
 sat-and-sun-are-not-valid=Saturday and Sunday are not valid
 search=Search
 select=Select
+selected-customers=Selected Customers
 selection=Selection
+selection-mode=Selection Mode
 selected-tab=Selected Tab
 server-events=Server Events
 server-filter-type=Server Filter Type
 size=Size
 small=Small
-sort=Sort
+sort-multiple-columns=Sort (Multiple Columns)
+sort-single-column=Sort (Single Column)
 source-code=Source Code
 start-progress=Start Progress
 stop-progress=Stop Progress
@@ -655,6 +670,7 @@ submit-and-re-render-page=Submit and Re-Render Page
 submit-non-faces-postback=Submit Non-Faces Postback
 submit-search=Submit Search
 success=Success
+summary-position=Summary Position
 text-field=Text Field
 text-from-title-attribute=Text from title attribute
 text-from-value-attribute=Text from value attribute
@@ -674,6 +690,7 @@ text-box-1=Text Box #1
 text-box-2=Text Box #2
 to-param-page=To Param page
 tooltip-value=Tooltip Value
+top=Top
 toplevel=Top-Level
 ui-component=The JSF runtime includes the [vdldoc:ui:component] Facelet [javadoc:javax.faces.view.facelets.TagHandler].
 ui-component-general=
@@ -712,6 +729,8 @@ valuechangelistener-execution-when-immediate-is-true=ValueChangeListener executi
 various-styles=Various Styles
 vdl-documentation=VDL Documentation
 view-params=View Params
+show-selected-customers-as-feedback=Show Selected Customers as Feedback
+show-selected-customers-in-modal-dialog=Show Selected Customers in Modal Dialog
 vertical-layout=Vertical Layout
 warning=Warning
 when-was-the-us-declaration-of-independence-signed=When was the US Declaration of Independence signed?
