--- a/pom.xml
+++ b/pom.xml
@@ -1143,6 +1143,12 @@
 				<groupId>org.richfaces</groupId>
 				<artifactId>richfaces</artifactId>
 				<version>${richfaces4.version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>org.jboss.spec.javax.el</groupId>
+						<artifactId>jboss-el-api_3.0_spec</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 			<dependency>
 				<groupId>org.jboss.arquillian</groupId>
