--- a/test/integration/demos/bridge/pom.xml
+++ b/test/integration/demos/bridge/pom.xml
@@ -17,12 +17,14 @@
 		<module>jsf2-portlet</module>
 		<!-- jsf2-cdi-portlet cannot be tested on WebLogic 10.x since it implements Servlet 2.5 -->
 		<module>jsf2-cdi-portlet</module>
-		<!-- <module>jsf2-html5-portlet</module> -->
+		<module>jsf2-html5-portlet</module>
 		<module>jsf2-spring-portlet</module>
 		<module>liferayfaces4-portlet</module>
 		<module>primefaces4-portlet</module>
 		<module>primefaces5-portlet</module>
+		<module>icefaces4-portlet</module>
 		<!-- richfaces4-portlet cannot be tested on WebLogic due to FACES-1677 -->
+		<module>richfaces4-portlet</module>
 		<module>jsf2-events</module>
 		<module>jsf2-ipc-pub-render-params-portlet</module>
 		<module>jsf2-export-pdf-portlet</module>
