--- a/demos/portal/primefaces4-users-portlet/pom.xml
+++ b/demos/portal/primefaces4-users-portlet/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.liferay.faces.demos</groupId>
 		<artifactId>liferay-faces-portal-demos</artifactId>
-		<version>4.2.0-m3-SNAPSHOT</version>
+		<version>4.2.0-beta-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>primefaces4-users-portlet</artifactId>
