--- a/jrebel/pom.xml
+++ b/jrebel/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.liferay.faces</groupId>
 		<artifactId>liferay-faces</artifactId>
-		<version>4.2.0-m3-SNAPSHOT</version>
+		<version>4.2.0-beta-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<groupId>com.liferay.faces.jrebel</groupId>
