--- a/maven/plugin/pom.xml
+++ b/maven/plugin/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.liferay.faces.maven</groupId>
 		<artifactId>liferay-faces-maven</artifactId>
-		<version>4.2.0-m3-SNAPSHOT</version>
+		<version>4.2.0-beta-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>liferay-faces-maven-plugin</artifactId>
