--- a/support/weblogic/glassfish-jsf/pom.xml
+++ b/support/weblogic/glassfish-jsf/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.liferay.faces.support</groupId>
 		<artifactId>liferay-faces-support-weblogic</artifactId>
-		<version>4.2.0-m3-SNAPSHOT</version>
+		<version>4.2.0-beta-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<groupId>com.oracle.weblogic</groupId>
