FACES-2202 Update alloy zip

--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,7 @@
 
 	<properties>
 		<alloyui.version>2.0.0</alloyui.version>
+		<alloyui.zip.version>2.0.0.50</alloyui.zip.version>
 		<app.server.type>tomcat</app.server.type>
 		<arquillian.version>1.1.1.Final</arquillian.version>
 		<arquillian.drone.version>1.2.0.Final</arquillian.drone.version>
