FACES-2143 Develop portal:captcha (code review and backport)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -578,6 +578,10 @@ please-choose-a-meeting-time-lunchtime-12-1-is-not-valid=Please choose a meeting
 please-visit-this-website-with-an-up-to-date-browser=Please visit this website with an up-to-date browser
 portal-buttonrow=[javadoc:com.liferay.faces.portal.component.buttonrow.ButtonRow] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;` element for grouping purposes. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of [vdldoc:h:panelGroup].
 portal-buttonrow-general=Buttons are arranged in a row by specifying [vdldoc:alloy:button] child tags.
+portal-captcha=[javadoc:com.liferay.faces.portal.component.captcha.Captcha] is a [javadoc:javax.faces.component.UIInput] that renders Liferay Portal's captcha image and a field for editing *single-line text*. It provides built-in validation in order to make sure that the text value entered by the user matches the value in the captcha image.
+portal-captcha-general=<p>The [vdldoc:portal:captcha:value] attribute can be *bound to a model bean property* via EL.</p>
+portal-captcha-general-example-1=Captcha Implementation:
+portal-captcha-header-note=<p>You can choose between *SimpleCaptcha* and *ReCaptcha* implementations by modifying the value of the `captcha.engine.impl` property in your portal-ext.properties file.</p><p>For more information, see the default values in the "Captcha" section of Liferay Portal's <a href="https://github.com/liferay/liferay-portal/blob/6.2.2-ga3/portal-impl/src/portal.properties#L4242" target="_blank">portal.properties</a> file.</p>
 portal-header=[javadoc:com.liferay.faces.portal.component.header.Header] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;div&gt;` tag. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of [vdldoc:h:panelGroup].
 portal-header-general=The component is used to display header text by specifying the [vdldoc:portal:header:title] attribute. It can also display a clickable *back icon*.
 portal-header-general-example-1=Specifying an internationalized key (provided by the portal) for the [vdldoc:portal:header:title] attribute.
@@ -614,7 +618,7 @@ portal-permissionsurl-toplevel=Access the *Top-Level Model Resource Permissions*
 portal-permissionsurl-windowstate=The [vdldoc:portal:permissionsURL:windowState] attribute is used to control how the Liferay Portal Permissions UI should be displayed (typically in an `&lt;iframe&gt;` dialog). Valid values include: `maximized`, `pop_up`, and `exclusive`. The default value is `maximized`.
 portal-permissionsurl-windowstate-example-1=Specifying `windowState="pop_up"`
 portal-runtime=[javadoc:com.liferay.faces.portal.component.runtime.Runtime] is a [javadoc:javax.faces.component.UIPanel] component that *embeds the markup of a different portlet* within the current portlet.
-portal-runtime-general=The general usage is to specify the embedded portlet by its name. The name of an out-of-the-box Liferay portlet can be determined by examining the `portlet-name` element of the portal's <a href="https://github.com/liferay/liferay-portal/blob/6.2.2-ga3/portal-web/docroot/WEB-INF/liferay-portlet.xml#L24" target="_blank">liferay-portlet.xml</a> descriptor.
+portal-runtime-general=The general usage is to specify the embedded portlet by its name. The name of an out-of-the-box Liferay portlet can be determined by examining the `portlet-name` element of the portal's <a href="https://github.com/liferay/liferay-portal/tree/6.2.2-ga3/portal-web/docroot/WEB-INF/liferay-portlet.xml#L24" target="_blank">liferay-portlet.xml</a> descriptor.
 portal-runtime-multiple-instances=Multiple instances can be specified by appending `_INSTANCE_` and a unique suffix to the value of the [vdldoc:portal:runtime:portletName] attribute. The portlet must have `&lt;instanceable&gt;true&lt;/instanceable&gt;` in the liferay-portlet.xml descriptor in order to support multiple instances.
 portlet-actionurl=[javadoc:com.liferay.faces.bridge.component.PortletActionURL] is a [javadoc:javax.faces.component.UIOutput] component that provides the ability to get a [javadoc:javax.portlet.PortletURL] that invokes the ACTION_PHASE of the portlet lifecycle targeting the current portlet.
 portlet-actionurl-general=Specify [vdldoc:portlet:param] as a child tag in order to add portlet *action parameters* to the URL. The [vdldoc:portlet:actionURL] component tag is *provided for the sake of completeness* since it has little purpose in JSF portlets. As shown in the example below, a *practical use-case* might be to @Override [javadoc:javax.portlet.faces.GenericFacesPortlet] in order to intercept a non-JSF postback.
@@ -689,6 +693,7 @@ time-pattern=Time Pattern
 text-for-a-link=Text for a link
 text-box-1=Text Box #1
 text-box-2=Text Box #2
+text-verification-code=Text Verification Code
 to-param-page=To Param page
 tooltip-value=Tooltip Value
 top=Top
