--- a/demos/bridge/richfaces4-portlet/pom.xml
+++ b/demos/bridge/richfaces4-portlet/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.liferay.faces.demos</groupId>
 		<artifactId>liferay-faces-bridge-demos</artifactId>
-		<version>4.2.0-beta-SNAPSHOT</version>
+		<version>4.2.0-beta</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>richfaces4-portlet</artifactId>
