--- a/issues/bridge/FACES-1470-portlet/pom.xml
+++ b/issues/bridge/FACES-1470-portlet/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.liferay.faces.issues</groupId>
 		<artifactId>liferay-faces-bridge-issues</artifactId>
-		<version>4.2.0-beta-SNAPSHOT</version>
+		<version>4.2.0-beta</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>FACES-1470-portlet</artifactId>
