--- a/reslib/pom.xml
+++ b/reslib/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.liferay.faces</groupId>
 		<artifactId>liferay-faces</artifactId>
-		<version>4.2.0-beta-SNAPSHOT</version>
+		<version>4.2.0-beta</version>
 	</parent>
 	<artifactId>liferay-faces-reslib</artifactId>
 	<name>Liferay Faces Resource Library</name>
