--- a/support/cdi/cdi-compat/pom.xml
+++ b/support/cdi/cdi-compat/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.liferay.faces</groupId>
 		<artifactId>liferay-faces</artifactId>
-		<version>4.2.0-beta-SNAPSHOT</version>
+		<version>4.2.0-beta</version>
 		<relativePath>../../../pom.xml</relativePath>
 	</parent>
 	<artifactId>liferay-faces-cdi-compat</artifactId>
