--- a/jrebel/plugin/pom.xml
+++ b/jrebel/plugin/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.liferay.faces.jrebel</groupId>
 		<artifactId>liferay-faces-jrebel</artifactId>
-		<version>4.2.0-beta</version>
+		<version>4.2.0-rc1-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>liferay-faces-jrebel-plugin</artifactId>
