--- a/demos/bridge/icefaces4-portlet/pom.xml
+++ b/demos/bridge/icefaces4-portlet/pom.xml
@@ -44,8 +44,8 @@
 			<artifactId>icefaces-ace</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.jboss.seam</groupId>
-			<artifactId>jboss-el</artifactId>
+			<groupId>org.glassfish.web</groupId>
+			<artifactId>el-impl</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.liferay.faces</groupId>
