--- a/demos/bridge/jsf2-flows-portlet/pom.xml
+++ b/demos/bridge/jsf2-flows-portlet/pom.xml
@@ -97,8 +97,8 @@
 			<artifactId>portlet-api</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.jboss.seam</groupId>
-			<artifactId>jboss-el</artifactId>
+			<groupId>org.glassfish.web</groupId>
+			<artifactId>el-impl</artifactId>
 		</dependency>
 	</dependencies>
 
