--- a/demos/bridge/jsf2-ipc-events-customers-portlet/src/main/webapp/WEB-INF/web.xml
+++ b/demos/bridge/jsf2-ipc-events-customers-portlet/src/main/webapp/WEB-INF/web.xml
@@ -18,7 +18,7 @@
 	<!-- Instruct Mojarra to utilize JBoss-EL instead of the EL implementation provided by the servlet container. -->
 	<context-param>
 		<param-name>com.sun.faces.expressionFactory</param-name>
-		<param-value>org.jboss.el.ExpressionFactoryImpl</param-value>
+		<param-value>com.sun.el.ExpressionFactoryImpl</param-value>
 	</context-param>
 	<!-- Instruct Mojarra to namespace parameters according to NamingContainer rules. -->
 	<!-- JAVASERVERFACES-3031 -->
