--- a/demos/bridge/jsf2-jsp-portlet/pom.xml
+++ b/demos/bridge/jsf2-jsp-portlet/pom.xml
@@ -55,8 +55,8 @@
 			<artifactId>log4j</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.jboss.seam</groupId>
-			<artifactId>jboss-el</artifactId>
+			<groupId>org.glassfish.web</groupId>
+			<artifactId>el-impl</artifactId>
 		</dependency>
 	</dependencies>
 
