--- a/demos/bridge/jsf2-spring-portlet/pom.xml
+++ b/demos/bridge/jsf2-spring-portlet/pom.xml
@@ -33,8 +33,8 @@
 			<artifactId>portlet-api</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.jboss.seam</groupId>
-			<artifactId>jboss-el</artifactId>
+			<groupId>org.glassfish.web</groupId>
+			<artifactId>el-impl</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
