--- a/demos/bridge/primefaces5-portlet/pom.xml
+++ b/demos/bridge/primefaces5-portlet/pom.xml
@@ -34,8 +34,8 @@
 			<version>${primefaces5.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.jboss.seam</groupId>
-			<artifactId>jboss-el</artifactId>
+			<groupId>org.glassfish.web</groupId>
+			<artifactId>el-impl</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.liferay.faces</groupId>
