--- a/demos/bridge/richfaces4-portlet/pom.xml
+++ b/demos/bridge/richfaces4-portlet/pom.xml
@@ -46,8 +46,8 @@
 			<artifactId>richfaces</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.jboss.seam</groupId>
-			<artifactId>jboss-el</artifactId>
+			<groupId>org.glassfish.web</groupId>
+			<artifactId>el-impl</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.liferay.faces</groupId>
