--- a/demos/portal/primefaces4-users-portlet/src/main/webapp/WEB-INF/web.xml
+++ b/demos/portal/primefaces4-users-portlet/src/main/webapp/WEB-INF/web.xml
@@ -7,10 +7,10 @@
 		<param-name>javax.faces.WEBAPP_RESOURCES_DIRECTORY</param-name>
 		<param-value>/WEB-INF/resources</param-value>
 	</context-param>
-	<!-- Instruct Mojarra to utilize JBoss-EL instead of the EL implementation provided by the servlet container. -->
+	<!-- Instruct Mojarra to utilize Unified-EL instead of the EL implementation provided by the servlet container. -->
 	<context-param>
 		<param-name>com.sun.faces.expressionFactory</param-name>
-		<param-value>org.jboss.el.ExpressionFactoryImpl</param-value>
+		<param-value>com.sun.el.ExpressionFactoryImpl</param-value>
 	</context-param>
 	<listener>
 		<listener-class>com.liferay.faces.demos.servlet.UploadedFileCleanupListener</listener-class>
