--- a/demos/portal/primefaces5-users-portlet/pom.xml
+++ b/demos/portal/primefaces5-users-portlet/pom.xml
@@ -43,8 +43,8 @@
 			<version>${primefaces5.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.jboss.seam</groupId>
-			<artifactId>jboss-el</artifactId>
+			<groupId>org.glassfish.web</groupId>
+			<artifactId>el-impl</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.liferay.faces</groupId>
