--- a/demos/showcase/showcase-webapp/pom.xml
+++ b/demos/showcase/showcase-webapp/pom.xml
@@ -79,8 +79,8 @@
 			<artifactId>javax.servlet.jsp-api</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.jboss.seam</groupId>
-			<artifactId>jboss-el</artifactId>
+			<groupId>org.glassfish.web</groupId>
+			<artifactId>el-impl</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.liferay.faces</groupId>
