--- a/issues/portal/FACES-257-portlet/pom.xml
+++ b/issues/portal/FACES-257-portlet/pom.xml
@@ -25,8 +25,8 @@
 			<artifactId>javax.servlet-api</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.jboss.seam</groupId>
-			<artifactId>jboss-el</artifactId>
+    			<groupId>org.glassfish.web</groupId>
+    			<artifactId>el-impl</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.liferay.faces</groupId>
