--- a/pom.xml
+++ b/pom.xml
@@ -1206,10 +1206,10 @@
 				<type>pom</type>
 			</dependency>
 			<dependency>
-				<groupId>org.jboss.seam</groupId>
-				<artifactId>jboss-el</artifactId>
-				<version>2.0.0.GA</version>
-				<exclusions>
+				<groupId>org.glassfish.web</groupId>
+				<artifactId>el-impl</artifactId>
+				<version>2.2</version>
+	    			<exclusions>
 					<exclusion>
 						<groupId>javax.el</groupId>
 						<artifactId>el-api</artifactId>
