--- a/bridge-ice/pom.xml
+++ b/bridge-ice/pom.xml
@@ -19,6 +19,11 @@
 		</dependency>
 		<dependency>
 			<groupId>${project.groupId}</groupId>
+			<artifactId>liferay-faces-bridge-impl</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>liferay-faces-util</artifactId>
 			<version>${project.version}</version>
 		</dependency>
