--- a/demos/bridge/jsf2-flows-portlet/src/main/resources/log4j.properties
+++ b/demos/bridge/jsf2-flows-portlet/src/main/resources/log4j.properties
@@ -2,12 +2,12 @@ log4j.rootLogger=INFO, R
 log4j.appender.R=org.apache.log4j.ConsoleAppender 
 log4j.appender.R.layout=org.apache.log4j.PatternLayout 
 log4j.appender.R.layout.ConversionPattern=%d{ABSOLUTE} %-5p [%c{1}:%L] %m%n
-log4j.logger.com.liferay.faces.bridge.BridgePhaseActionImpl=DEBUG
-log4j.logger.com.liferay.faces.bridge.BridgePhaseEventImpl=DEBUG
-log4j.logger.com.liferay.faces.bridge.BridgePhaseRenderImpl=DEBUG
-log4j.logger.com.liferay.faces.bridge.BridgePhaseResourceImpl=DEBUG
+log4j.logger.com.liferay.faces.bridge.internal.BridgePhaseActionImpl=DEBUG
+log4j.logger.com.liferay.faces.bridge.internal.BridgePhaseEventImpl=DEBUG
+log4j.logger.com.liferay.faces.bridge.internal.BridgePhaseRenderImpl=DEBUG
+log4j.logger.com.liferay.faces.bridge.internal.BridgePhaseResourceImpl=DEBUG
 log4j.logger.com.liferay.faces.bridge.event.internal.PostConstructApplicationConfigListener=DEBUG
-log4j.logger.com.liferay.faces.bridge.bean.BeanManagerMojarraImpl=DEBUG
-log4j.logger.com.liferay.faces.bridge.bean.MojarraInjectionProvider=DEBUG
+log4j.logger.com.liferay.faces.bridge.bean.internal.BeanManagerMojarraImpl=DEBUG
+log4j.logger.com.liferay.faces.bridge.bean.internal.MojarraInjectionProvider=DEBUG
 log4j.logger.com.liferay.faces.util.lifecycle.DebugPhaseListener=DEBUG
 log4j.logger.com.liferay.faces.demos=DEBUG
