FACES-2247 Remove the attributes of StarRating that did not work and made sure that those of ThumbRating are only those that are appropriate.

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -332,9 +332,7 @@ alloy-selectoneradio-immediate=When the [vdldoc:alloy:selectOneRadio:immediate] 
 alloy-selectoneradio-vertical-layout=Setting the value of the [vdldoc:alloy:selectOneRadio:layout] attribute to `pageDirection` will cause the component to render with a *vertical layout*.
 alloy-selectstarrating=[javadoc:com.liferay.faces.alloy.component.selectstarrating.SelectStarRating] is a [javadoc:javax.faces.component.UISelectOne] component that renders a set of stars. The user can click on a star to select a rating and click on the same star a second time to de-select a rating. Since it extends [javadoc:javax.faces.component.html.HtmlSelectOneRadio], it accepts [vdldoc:f:selectItem] or [vdldoc:f:selectItems] as child tags.
 alloy-selectstarrating-data-model=The component can display stars *dynamically* when the [vdldoc:f:selectItems:value] attribute of the child [vdldoc:f:selectItems] tag is bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:f:selectItems:var] attribute of the child [vdldoc:f:selectItems] tag is used to introduce a variable name into the EL when iterating over the model.
-alloy-selectstarrating-default-value=A *default value* can be specified using one of two ways:
-alloy-selectstarrating-default-value-example-1=Initializing the default value in the model bean.
-alloy-selectstarrating-default-value-example-2=Setting the [vdldoc:alloy:starRating:defaultSelected] attribute.
+alloy-selectstarrating-default-value=Initialize the default value using the model bean.
 alloy-selectstarrating-general=There are two basic ways to *bind* the [vdldoc:alloy:starRating:value] attribute this component to a model bean property:
 alloy-selectstarrating-general-example-1=String value (no converter required)
 alloy-selectstarrating-general-example-2=Object value (requires a converter)
