--- a/test/bridge-tck/bridge-tck-response-wrapper-portlet/src/main/webapp/WEB-INF/web.xml
+++ b/test/bridge-tck/bridge-tck-response-wrapper-portlet/src/main/webapp/WEB-INF/web.xml
@@ -60,4 +60,19 @@
     <servlet-name>faces</servlet-name>
     <url-pattern>*.jsf</url-pattern>
   </servlet-mapping>
+  	<!-- BEGIN: LIFERAY FACES BRIDGE -->
+	<!-- Prevent direct access to Facelet view XHTML by the userAgent (browser). -->
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>Facelet View XHTML</web-resource-name>
+			<url-pattern>*.xhtml</url-pattern>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>nobody</role-name>
+		</auth-constraint>
+	</security-constraint>
+	<security-role>
+		<role-name>nobody</role-name>
+	</security-role>
+	<!-- END: LIFERAY FACES BRIDGE -->
 </web-app>
