FACES-2244 Unable to execute navigation-rule with a view-param that contains an EL expression (temporary workaround)

--- a/support/pom.xml
+++ b/support/pom.xml
@@ -15,6 +15,7 @@
 	<modules>
 		<module>cdi/cdi-compat</module>
 		<module>cdi/cdi-weld</module>
+		<module>mojarra</module>
 	</modules>
 
 	<profiles>
