--- a/demos/showcase/showcase-webapp/pom.xml
+++ b/demos/showcase/showcase-webapp/pom.xml
@@ -93,6 +93,11 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>com.liferay.faces.support</groupId>
+			<artifactId>liferay-faces-mojarra-compat</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>showcase-common</artifactId>
 			<version>${project.version}</version>
