FACES-2253 Refactor portlet namespaced components to comply with portlet 2.0 spec and allow them to be generated by alloy-generator

--- a/util/generator.properties
+++ b/util/generator.properties
@@ -3,7 +3,7 @@
 ##
 
 builder.authors=${authors}
-builder.components.definitions=./components-ext.xml
+builder.components.definitions=./${namespace}-components.xml
 builder.copyright.year=2015
 
 ##
@@ -15,6 +15,7 @@ builder.faces.api.output.dir=${component.api.output.dir}
 builder.faces.impl.output.dir=${component.impl.output.dir}
 builder.faces.version=${faces.spec.version}
 builder.faces.taglib.xml.namespace=${namespace}
+builder.faces.taglib.xml.namespace.URI=${namespace.URI}
 builder.faces.taglib.xml.output.dir=src/main/resources/META-INF
 
 # Attributes do not need to be namespaced because they are all manually chosen.
