FACES-1988 Develop alloy:progressBar component (showcase-webapp needed i18n for vertical)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -738,6 +738,7 @@ vdl-documentation=VDL Documentation
 view-params=View Params
 show-selected-customers-as-feedback=Show Selected Customers as Feedback
 show-selected-customers-in-modal-dialog=Show Selected Customers in Modal Dialog
+vertical=Vertical
 vertical-layout=Vertical Layout
 warning=Warning
 when-was-the-us-declaration-of-independence-signed=When was the US Declaration of Independence signed?
