--- a/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/alloy.properties
@@ -18,10 +18,10 @@ misc_alloy_form=general:form.xhtml,FormBackingBean.java|instant-ajax:form.xhtml,
 misc_alloy_head=general:webappHead.xhtml,portletHead.xhtml
 misc_alloy_loadConstants=general:loadConstants.xhtml,ClassConstants.java,EnumConstants.java,InterfaceConstants.java
 misc_alloy_progressBar=general:progressBar.xhtml,ProgressBarBacking.java|client-side:progressBar.xhtml|server-events:progressBar.xhtml,ProgressBarBacking.java|vertical:progressBar.xhtml,ProgressBarBacking.java
-multimedia_alloy_audio=general:audio.xhtml,AudioBacking.java|graceful-degradation:audio.xhtml,AudioBacking.java|alternate-formats:audio.xhtml,AudioBacking.java|html5-passthrough:audio.xhtml
+multimedia_alloy_audio=general:audio.xhtml,AudioBacking.java|graceful-degradation:audio.xhtml,AudioBacking.java|alternate-formats:audio.xhtml,AudioBacking.java
 multimedia_alloy_icon=general:icon.xhtml
 multimedia_alloy_image=general:image.xhtml
-multimedia_alloy_video=general:video.xhtml,VideoBacking.java|graceful-degradation:video.xhtml,VideoBacking.java|alternate-formats:video.xhtml,VideoBacking.java|html5-passthrough:video.xhtml
+multimedia_alloy_video=general:video.xhtml,VideoBacking.java|graceful-degradation:video.xhtml,VideoBacking.java|alternate-formats:video.xhtml,VideoBacking.java
 output_alloy_message=general:message.xhtml,MessageBackingBean.java
 output_alloy_messages=general:messages.xhtml,MessageBackingBean.java
 output_alloy_outputFormat=general:outputFormat.xhtml
