FACES-2258 Move portal:buttonRow to alloy:buttonRow

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -736,6 +736,7 @@ valuechangelistener-execution-when-immediate-is-true=ValueChangeListener executi
 various-styles=Various Styles
 vdl-documentation=VDL Documentation
 view-params=View Params
+save=Save
 show-selected-customers-as-feedback=Show Selected Customers as Feedback
 show-selected-customers-in-modal-dialog=Show Selected Customers in Modal Dialog
 vertical=Vertical
